fix: previous/next arrows
not showing up correctly on android so switched icon
positioned to align with text
transparent color and text-shadow to get solid green icon

--- a/style.scss
+++ b/style.scss
@@ -357,12 +357,30 @@ nav {
   padding: 2rem 0;
 
   a.next:after {
-    content: "\2B9A";
-    padding-left: 2px;
+    color: transparent;
+    content: "\1F449";
+    display: inline-block;
+    left: 2px;
+    position: relative;
+    text-shadow: 0 0 $green;
+    top: -4px;
+
+    @include mobile {
+      top: 0;
+    }
   }
   a.previous:before {
-    content: "\2B98";
-    padding-right: 2px;
+    color: transparent;
+    content: "\1F448";
+    display: inline-block;
+    right: 2px;
+    position: relative;
+    text-shadow: 0 0 $green;
+    top: -4px;
+
+    @include mobile {
+      top: 0;
+    }
   }
 }
 
